<resources>
    <string name="app_name">Shoe Store</string>

    <string name="email">Email</string>
    <string name="insert_email">Insert you email</string>
    <string name="insert_password">Insert your password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome to the Shoe Store!\nManage your shoe stock here.</string>
    <string name="check_out">Check out</string>
    <string name="instruction_text">Start adding your shoes and keep them on control.</string>
    <string name="instruction">Instruction</string>
    <string name="instructionTitle">Get Ready!</string>
    <string name="confirm">Confirm</string>
    <string name="size_format">Size: %,.1f</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
